add config parser and config-example.txt